Baja participante completado
Ya esta implementado la eliminación de un participante. Falta hacer
funcionar el editar. El problema es que en la entidad se declara
imagePath como string, en el form se toma como file, pero luego esto lo
toma como contradictorio y no renderiza el form.

--- a/src/IAW/ParticipanteBundle/Resources/config/routing.yml
+++ b/src/IAW/ParticipanteBundle/Resources/config/routing.yml
@@ -29,7 +29,7 @@ iaw_participante_view:
     defaults: { _controller: IAWParticipanteBundle:Participante:view }
 
 iaw_participante_delete:
-    path: /participante/delete
+    path: /participante/delete/{id}
     defaults: { _controller: IAWParticipanteBundle:Participante:delete }
 
 # Si se trata ingresar por url directo a /participante/create,
