--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,9 @@
+iaw_torneo:
+    resource: "@IAWTorneoBundle/Resources/config/routing.yml"
+    prefix:   /
+
+
+
 iaw_participante:
     resource: "@IAWParticipanteBundle/Resources/config/routing.yml"
     prefix:   /
