--- a/src/IAW/TorneoBundle/Resources/config/routing.yml
+++ b/src/IAW/TorneoBundle/Resources/config/routing.yml
@@ -1,3 +1,17 @@
 iaw_torneo_homepage:
-    path:     /
+    path:     /helloworld
     defaults: { _controller: IAWTorneoBundle:Default:index }
+
+iaw_torneo_index:
+    path: /Fixture/index
+    defaults: { _controller: IAWTorneoBundle:Torneo:index }
+
+iaw_torneo_add:
+    path: /Fixture/add
+    defaults: { _controller: IAWTorneoBundle:Torneo:add }
+
+
+iaw_torneo_create:
+    path: /Fixture/create
+    defaults: { _controller: IAWTorneoBundle:Torneo:create }
+    methods: POST
