Algunos cambios a torneo
Saque el atributo de año, ya que con la fecha inicio se sabe de que año
es.
Y cambie unas cosas del formato del form

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -35,8 +35,8 @@ security:
             # form_login: ~
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
 
-#    access_control:
-#        - { path: ^/admin, roles: ROLE_ADMIN }
+    access_control:
+      - { path: ^/admin, roles: ROLE_ADMIN }
 
     #Utilizado para encriptar la constraseña del usuario
     encoders:
