--- a/src/IAW/TorneoBundle/Resources/config/routing.yml
+++ b/src/IAW/TorneoBundle/Resources/config/routing.yml
@@ -6,10 +6,6 @@ iaw_torneo_index:
     path: /Fixture/index
     defaults: { _controller: IAWTorneoBundle:Torneo:index }
 
-iaw_partido_index:
-    path: /editar/partidos/index
-    defaults: { _controller: IAWTorneoBundle:Partido:index }
-
 iaw_torneo_add:
     path: /Fixture/add
     defaults: { _controller: IAWTorneoBundle:Torneo:add }
@@ -19,3 +15,17 @@ iaw_torneo_create:
     path: /Fixture/create
     defaults: { _controller: IAWTorneoBundle:Torneo:create }
     methods: POST
+
+iaw_partido_index:
+    path: /editar/partidos/index
+    defaults: { _controller: IAWTorneoBundle:Partido:index }
+
+iaw_partido_edit:
+    path: /editar/partidos/resultado/{id}
+    defaults: { _controller: IAWTorneoBundle:Partido:edit }
+
+
+iaw_partido_update:
+    path: /update/partidos/resultado/{id}
+    defaults: { _controller: IAWTorneoBundle:Partido:update }
+    methods: [POST, PUT]
