--- a/src/IAW/ParticipanteBundle/Resources/config/routing.yml
+++ b/src/IAW/ParticipanteBundle/Resources/config/routing.yml
@@ -7,20 +7,20 @@ iaw_participante_index:
     defaults: { _controller: IAWParticipanteBundle:Participante:index }
 
 iaw_participante_add:
-    path: /participante/add
+    path: admin/participante/add
     defaults: { _controller: IAWParticipanteBundle:Participante:add }
 
 iaw_participante_create:
-    path: /participante/create
+    path: admin/participante/create
     defaults: { _controller: IAWParticipanteBundle:Participante:create }
     methods:  POST
 
 iaw_participante_edit:
-    path: /participante/edit/{id}
+    path: admin/participante/edit/{id}
     defaults: { _controller: IAWParticipanteBundle:Participante:edit }
 
 iaw_participante_update:
-    path: /participante/update/{id}
+    path: admin/participante/update/{id}
     defaults: { _controller: IAWParticipanteBundle:Participante:update }
     methods: [POST, PUT]
 
@@ -29,16 +29,16 @@ iaw_participante_view:
     defaults: { _controller: IAWParticipanteBundle:Participante:view }
 
 iaw_participante_delete:
-    path: /participante/delete/{id}
+    path: admin/participante/delete/{id}
     defaults: { _controller: IAWParticipanteBundle:Participante:delete }
 
 
 iaw_jugador_add:
-    path: /jugador/add/{participanteID}
+    path: admin/jugador/add/{participanteID}
     defaults: { _controller: IAWParticipanteBundle:Jugador:add }
 
 iaw_jugador_create:
-    path: /jugador/create/{participanteID}
+    path: admin/jugador/create/{participanteID}
     defaults: { _controller: IAWParticipanteBundle:Jugador:create }
     methods:  POST
 
@@ -46,17 +46,17 @@ iaw_jugador_create:
 # Si se trata ingresar por url directo a /participante/create,
 # luego se redirecciona a /participante/add.
 iaw_participante_redirect_add:
-    path: /participante/create
+    path: admin/participante/create
     defaults:
         _controller: IAWParticipanteBundle:Participante:add
-        path: /participante/add
+        path: admin/participante/add
         permanent: true
 
 # Si se trata ingresar por url directo a /participante/update,
 # luego se redirecciona a /participante/edit.
 iaw_participante_redirect_edit:
-    path: /participante/update/{id}
+    path: admin/participante/update/{id}
     defaults:
         _controller: IAWParticipanteBundle:Participante:edit
-        path: /participante/editar/{id}
+        path: admin/participante/editar/{id}
         permanent: true
